--- a/org/clojure.html
+++ b/org/clojure.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="sr" xml:lang="sr">
 <head>
-<!-- 2017-04-02 нед 19:07 -->
+<!-- 2017-04-02 нед 23:29 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Napredne tehnike programiranja - Clojure</title>
@@ -244,44 +244,45 @@ for the JavaScript code in this tag.
 <h2>Sadr&#382;aj</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgda71a1b">1. Uvod</a>
+<li><a href="#orgaa6a034">1. Uvod</a>
 <ul>
-<li><a href="#org7328360">1.1. Lisp</a>
+<li><a href="#org1703fd0">1.1. Lisp</a>
 <ul>
-<li><a href="#org38abcf7">1.1.1. Scheme</a></li>
+<li><a href="#orgac60d53">1.1.1. Scheme</a></li>
 </ul>
 </li>
-<li><a href="#org374dfb1">1.2. Imperativno vs funckionalno programiranje</a></li>
-<li><a href="#org98bc315">1.3. Funkcionalni način razmišljanja</a></li>
-<li><a href="#org87be574">1.4. Clojure u standardnim OO problemima</a></li>
+<li><a href="#org7eebbc1">1.2. Clojure - funkcionalni način razmišljanja</a></li>
+<li><a href="#orge169dfe">1.3. Imperativno vs funckionalno programiranje</a></li>
+<li><a href="#org73775c5">1.4. Clojure kao <i>value oriented</i> jezik</a></li>
+<li><a href="#org281d318">1.5. Clojure u standardnim OO problemima</a></li>
 </ul>
 </li>
-<li><a href="#org91d32d1">2. Elementi jezika</a>
+<li><a href="#org95ba073">2. Elementi jezika</a>
 <ul>
-<li><a href="#org04a84f3">2.1. <i>Homoiconicy</i> &#x2014; "istoizglednost"</a></li>
+<li><a href="#org466efd5">2.1. <i>Homoiconicy</i> &#x2014; "istoizglednost"</a></li>
 </ul>
 </li>
-<li><a href="#org250ac3f">3. REPL i IDE</a></li>
-<li><a href="#orgd9b452f">4. Read, evaluate vrtlog i makroi</a></li>
-<li><a href="#orgc647097">5. Konkurentno i paralelno programiranje</a>
+<li><a href="#org8ccf9a3">3. REPL i IDE</a></li>
+<li><a href="#org1673081">4. Read, evaluate vrtlog i makroi</a></li>
+<li><a href="#org3bab1b5">5. Konkurentno i paralelno programiranje</a>
 <ul>
-<li><a href="#org87b89d4">5.1. Reference</a></li>
-<li><a href="#orgfcd7746">5.2. core.async</a></li>
+<li><a href="#org3298ab2">5.1. Reference</a></li>
+<li><a href="#org4389eed">5.2. core.async</a></li>
 </ul>
 </li>
-<li><a href="#orgb8aa7e4">6. Interakcija sa platformom</a></li>
-<li><a href="#orgd016118">7. Apstrakcije</a>
+<li><a href="#org101731c">6. Interakcija sa platformom</a></li>
+<li><a href="#org8dd5319">7. Apstrakcije</a>
 <ul>
-<li><a href="#org8616bd6">7.1. Multimethods</a></li>
-<li><a href="#orga6a81aa">7.2. Protocols</a></li>
-<li><a href="#orgc74047b">7.3. Records</a></li>
-<li><a href="#orgd496a07">7.4. clojure.spec</a></li>
+<li><a href="#org34f4353">7.1. Multimethods</a></li>
+<li><a href="#org249ecf7">7.2. Protocols</a></li>
+<li><a href="#org3417b1e">7.3. Records</a></li>
+<li><a href="#orgbcb434c">7.4. clojure.spec</a></li>
 </ul>
 </li>
-<li><a href="#orgc54e164">8. ClojureScript</a></li>
-<li><a href="#orga803364">9. Reader conditionals (.cljc)</a></li>
-<li><a href="#orge29fa1c">10. ClojureCLR</a></li>
-<li><a href="#org0c9c9d9">11. Literatura</a></li>
+<li><a href="#org968939d">8. ClojureScript</a></li>
+<li><a href="#orgb9146dd">9. Reader conditionals (.cljc)</a></li>
+<li><a href="#orgc1156d7">10. ClojureCLR</a></li>
+<li><a href="#orgf505e34">11. Literatura</a></li>
 </ul>
 </div>
 </div>
@@ -317,8 +318,8 @@ system that ensure clean, correct, multithreaded designs.
 </p>
 </blockquote>
 
-<div id="outline-container-orgda71a1b" class="outline-2">
-<h2 id="orgda71a1b"><span class="section-number-2">1</span> Uvod</h2>
+<div id="outline-container-orgaa6a034" class="outline-2">
+<h2 id="orgaa6a034"><span class="section-number-2">1</span> Uvod</h2>
 <div class="outline-text-2" id="text-1">
 <blockquote>
 <p>
@@ -333,8 +334,8 @@ in the expert's mind there are few.
 </blockquote>
 </div>
 
-<div id="outline-container-org7328360" class="outline-3">
-<h3 id="org7328360"><span class="section-number-3">1.1</span> Lisp</h3>
+<div id="outline-container-org1703fd0" class="outline-3">
+<h3 id="org1703fd0"><span class="section-number-3">1.1</span> Lisp</h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 <b>Lisp</b> ili <b>LISP</b> je porodica programskih jezika sa dugom
@@ -399,8 +400,8 @@ još pregršt drugih dijalekata sa raznim osobinama:
 </ul>
 </div>
 
-<div id="outline-container-org38abcf7" class="outline-4">
-<h4 id="org38abcf7"><span class="section-number-4">1.1.1</span> Scheme</h4>
+<div id="outline-container-orgac60d53" class="outline-4">
+<h4 id="orgac60d53"><span class="section-number-4">1.1.1</span> Scheme</h4>
 <div class="outline-text-4" id="text-1-1-1">
 <p>
 <b>Scheme</b> je jedan od najznačajnijih dijalekata Lisp-a. Dizajniran
@@ -423,7 +424,7 @@ samo dva.
 </p>
 </div>
 
-<ol class="org-ol"><li><a id="org2b9640f"></a>Chez Scheme (Cisco)<br /><div class="outline-text-5" id="text-1-1-1-1">
+<ol class="org-ol"><li><a id="org525befb"></a>Chez Scheme (Cisco)<br /><div class="outline-text-5" id="text-1-1-1-1">
 <p>
 <a href="https://github.com/cisco/ChezScheme"><b>Chez</b></a> je <a href="http://www.r6rs.org/">Scheme implementacija</a> zajedno sa (moćnim) kompajlerom,
 <i>run time</i> sistemom i bibliotekama. Koristi je kompanije Cisco a
@@ -438,7 +439,7 @@ C biblioteka onda nije loše da počnete sa <b>Chez</b>-om.
 </p>
 </div></li>
 
-<li><a id="orgefda6fa"></a>Racket lang<br /><div class="outline-text-5" id="text-1-1-1-2">
+<li><a id="orgd02674c"></a>Racket lang<br /><div class="outline-text-5" id="text-1-1-1-2">
 <p>
 <a href="https://racket-lang.org/">Racket lang</a> je takođe implementacija Schema-a ali sa potpuno
 drugim ciljevima pri dizajnu. Racket je po svom dizajnu sistem za
@@ -456,24 +457,145 @@ kojeg možete mnogo da naučite.
 </div>
 </div>
 
-<div id="outline-container-org374dfb1" class="outline-3">
-<h3 id="org374dfb1"><span class="section-number-3">1.2</span> Imperativno vs funckionalno programiranje</h3>
+<div id="outline-container-org7eebbc1" class="outline-3">
+<h3 id="org7eebbc1"><span class="section-number-3">1.2</span> Clojure - funkcionalni način razmišljanja</h3>
+<div class="outline-text-3" id="text-1-2">
+<p>
+Danas postoji mnogo programskih jezika i zaista se (pre)veliki deo
+njih međusobno razlikuje skoro isključivo po sintaksi. Tako da
+danas nije nikakav problem nazivati se <b>polyglot</b> programerom -
+samo naučite par sintaktičkih pravila i <i>Voila!</i> znate još jedan
+programski jezik (nezaboravite da osvežite svoj CV).
+</p>
+
+<p>
+<b>Clojure</b> ipak nije jedan od jezika koji su Vam od ranije
+poznati. Čak ni na prvi pogled (za šta je zaslužna <i>S-expression</i>
+prefiksna notacija). Stoga, kako biste ga naučili morate primeniti
+neku drugu strategiju u odnosu na onu navedenu iznad.
+</p>
+
+<p>
+Evo jednog predloženog pristupa:
+</p>
+
+<blockquote>
+<p>
+Zaboravite sve što znate o programiranju. <b>Pristupite učenju
+Clojure-a kao da Vam je to prvi programski jezik</b> . U suprotnom
+ćete Clojure shvatiti samo kao <i>prefiksnu notaciju sa zagradama
+okolo koja Vam ne dozvoljava da pišete kod onako kako ste navikli!</i>
+</p>
+
+<p>
+<b>Umesto da pokušavate svoje znanje od ranije da preslikate na</b>
+<b>Clojure dozvolite ovom Lispu da obogati način na koji pišete</b>
+<b>ostale programske jezike.</b>
+</p>
+</blockquote>
+</div>
 </div>
 
-<div id="outline-container-org98bc315" class="outline-3">
-<h3 id="org98bc315"><span class="section-number-3">1.3</span> Funkcionalni način razmišljanja</h3>
+<div id="outline-container-orge169dfe" class="outline-3">
+<h3 id="orge169dfe"><span class="section-number-3">1.3</span> Imperativno vs funckionalno programiranje</h3>
+<div class="outline-text-3" id="text-1-3">
+<p>
+C, C++, C#, Java, Python svi ovi (i drugi) programski jezici imaju
+veoma sličnu sintaksu i svi koriste veoma slične programske
+konstrukcije sa akcentom na imperativno programiranje.
+</p>
+
+<blockquote>
+<p>
+U kompjuterskoj nauci imperativnim programiranjem je paradigma
+programiranja koja koristi naredbe u cilju menjanja stanja
+programa.
+</p>
+</blockquote>
+
+<p>
+Ova paradigma programiranja se savršeno uklapa u <a href="https://en.wikipedia.org/wiki/Von_Neumann_architecture">von Neumann-ov
+model izračunavanja</a> na računaru. Tačnije, ona je dizajnirana kako
+bi oslikala pomenuti model izračunavanja.
+</p>
+
+<p>
+Na primer, C je dominirao softverom veliki broj godina jer se
+odlično uklapa u ovu dominantnu paradigmu hardverske
+arhitekture. Programi napisani u C-u su veoma efikasni i u stanju
+su da vrše veoma efikasno upravljanje memorijom koja je do skora
+bila veliki problem. Ova efikasnost je plaćena cenom izraženom u
+kompleksnijoj semantici i sintaksi samog jezika i sa porastom
+programskog koda dramatično opada sposobnost programera da
+iskontroliše konstruktorsku kompleksnost u takvim programima što
+dovodi do češćih defekata u radu programa (<b>program radi brzo ali
+ne i ono što želimo &#x2014; korektno</b>). Ova kompleksnost potiče od toga
+što kod imperativnog programiranja posao koji naredbe obavljaju
+snažno zavisi od stanja memorije u tom momentu. To čini
+<b>konkurentno</b> programiranje veoma komplikovanim i stoga podložnim
+greškama.
+</p>
+
+<blockquote>
+<p>
+Danas kada je memorija veoma brza i jeftina a kada višeprocesorske
+arhitekture svi nosimo u džepovima ili pametnim satovima
+imperativno programiranje počinje da pokazuje ozbiljne znake
+starenja.
+</p>
+</blockquote>
+
+<p>
+Funkcionalno programiranje se zasniva više na stabilnim
+matematičkim konceptima nego na bilo kom modelu izračunavanja na
+mašini. Clojure kao funkcionalan programski jezik ima snažan fokus
+na <a href="https://en.wikipedia.org/wiki/Immutable_object">nepromenljivosti podataka</a> (u daljem tekstu mutabilnost). To mu
+omogućava veoma čiste i jednostavne apstrakcije za konkurentno
+programiranje koje su svakako korektnije i manje podložno greškama
+od eksplicitnog zaključavanja delova memorije na koje smo usmereni
+u imperativnom programiranju.
+</p>
+
+<p>
+Clojure (kao Lisp) je zapravo zasnovan na jednom veoma konciznom
+matematičkom modelu kakav je Lambda račun pa tako i njegova
+sintaksa barata sa svega nekoliko raznih konstrukcija što je čini
+veoma prostom. <i>Uviđanje ove jednostavnosti dolazi uz malo vežbe.</i>
+</p>
+</div>
 </div>
 
-<div id="outline-container-org87be574" class="outline-3">
-<h3 id="org87be574"><span class="section-number-3">1.4</span> Clojure u standardnim OO problemima</h3>
+<div id="outline-container-org73775c5" class="outline-3">
+<h3 id="org73775c5"><span class="section-number-3">1.4</span> Clojure kao <i>value oriented</i> jezik</h3>
+<div class="outline-text-3" id="text-1-4">
+<p>
+Clojure promoviše stil programiranja koji se zove <i>value-oriented
+programming</i> i nije jedini jezik koji to radi. <b>Rich Hickey</b> je
+ovaj koncept vrlo lepo objasnio u svom <a href="https://www.youtube.com/watch?v=-6BsiVyC1kM">izlaganju</a> na <i>Jax
+Conf</i>-u 2012. godine.
+</p>
+
+<p>
+Ideja je da se programer koncentriše na vrednosti u njegovom
+programu a ne na mutabilne objekte i njihovo stanje (objekti se
+smatraju tankom apstrakcijom oko "gole" memorije). Ovo je veoma
+moćan koncept jer kada prestanete da razmišljate o objektima i
+memoriji onda konkurentno programiranje postaje manje više
+trivijalan posao
+</p>
 </div>
 </div>
 
-<div id="outline-container-org91d32d1" class="outline-2">
-<h2 id="org91d32d1"><span class="section-number-2">2</span> Elementi jezika</h2>
+<div id="outline-container-org281d318" class="outline-3">
+<h3 id="org281d318"><span class="section-number-3">1.5</span> Clojure u standardnim OO problemima</h3>
+</div>
+</div>
+
+<div id="outline-container-org95ba073" class="outline-2">
+<h2 id="org95ba073"><span class="section-number-2">2</span> Elementi jezika</h2>
 <div class="outline-text-2" id="text-2">
-</div><div id="outline-container-org04a84f3" class="outline-3">
-<h3 id="org04a84f3"><span class="section-number-3">2.1</span> <i>Homoiconicy</i> &#x2014; "istoizglednost"</h3>
+</div><div id="outline-container-org466efd5" class="outline-3">
+<h3 id="org466efd5"><span class="section-number-3">2.1</span> <i>Homoiconicy</i> &#x2014; "istoizglednost"</h3>
 <div class="outline-text-3" id="text-2-1">
 
 <div class="figure">
@@ -499,64 +621,64 @@ zamišljamo.
 </div>
 </div>
 
-<div id="outline-container-org250ac3f" class="outline-2">
-<h2 id="org250ac3f"><span class="section-number-2">3</span> REPL i IDE</h2>
+<div id="outline-container-org8ccf9a3" class="outline-2">
+<h2 id="org8ccf9a3"><span class="section-number-2">3</span> REPL i IDE</h2>
 </div>
 
-<div id="outline-container-orgd9b452f" class="outline-2">
-<h2 id="orgd9b452f"><span class="section-number-2">4</span> Read, evaluate vrtlog i makroi</h2>
+<div id="outline-container-org1673081" class="outline-2">
+<h2 id="org1673081"><span class="section-number-2">4</span> Read, evaluate vrtlog i makroi</h2>
 </div>
 
-<div id="outline-container-orgc647097" class="outline-2">
-<h2 id="orgc647097"><span class="section-number-2">5</span> Konkurentno i paralelno programiranje</h2>
+<div id="outline-container-org3bab1b5" class="outline-2">
+<h2 id="org3bab1b5"><span class="section-number-2">5</span> Konkurentno i paralelno programiranje</h2>
 <div class="outline-text-2" id="text-5">
-</div><div id="outline-container-org87b89d4" class="outline-3">
-<h3 id="org87b89d4"><span class="section-number-3">5.1</span> Reference</h3>
+</div><div id="outline-container-org3298ab2" class="outline-3">
+<h3 id="org3298ab2"><span class="section-number-3">5.1</span> Reference</h3>
 </div>
 
-<div id="outline-container-orgfcd7746" class="outline-3">
-<h3 id="orgfcd7746"><span class="section-number-3">5.2</span> core.async</h3>
+<div id="outline-container-org4389eed" class="outline-3">
+<h3 id="org4389eed"><span class="section-number-3">5.2</span> core.async</h3>
 </div>
 </div>
 
-<div id="outline-container-orgb8aa7e4" class="outline-2">
-<h2 id="orgb8aa7e4"><span class="section-number-2">6</span> Interakcija sa platformom</h2>
+<div id="outline-container-org101731c" class="outline-2">
+<h2 id="org101731c"><span class="section-number-2">6</span> Interakcija sa platformom</h2>
 </div>
 
-<div id="outline-container-orgd016118" class="outline-2">
-<h2 id="orgd016118"><span class="section-number-2">7</span> Apstrakcije</h2>
+<div id="outline-container-org8dd5319" class="outline-2">
+<h2 id="org8dd5319"><span class="section-number-2">7</span> Apstrakcije</h2>
 <div class="outline-text-2" id="text-7">
-</div><div id="outline-container-org8616bd6" class="outline-3">
-<h3 id="org8616bd6"><span class="section-number-3">7.1</span> Multimethods</h3>
+</div><div id="outline-container-org34f4353" class="outline-3">
+<h3 id="org34f4353"><span class="section-number-3">7.1</span> Multimethods</h3>
 </div>
 
-<div id="outline-container-orga6a81aa" class="outline-3">
-<h3 id="orga6a81aa"><span class="section-number-3">7.2</span> Protocols</h3>
+<div id="outline-container-org249ecf7" class="outline-3">
+<h3 id="org249ecf7"><span class="section-number-3">7.2</span> Protocols</h3>
 </div>
 
-<div id="outline-container-orgc74047b" class="outline-3">
-<h3 id="orgc74047b"><span class="section-number-3">7.3</span> Records</h3>
+<div id="outline-container-org3417b1e" class="outline-3">
+<h3 id="org3417b1e"><span class="section-number-3">7.3</span> Records</h3>
 </div>
 
-<div id="outline-container-orgd496a07" class="outline-3">
-<h3 id="orgd496a07"><span class="section-number-3">7.4</span> clojure.spec</h3>
+<div id="outline-container-orgbcb434c" class="outline-3">
+<h3 id="orgbcb434c"><span class="section-number-3">7.4</span> clojure.spec</h3>
 </div>
 </div>
 
-<div id="outline-container-orgc54e164" class="outline-2">
-<h2 id="orgc54e164"><span class="section-number-2">8</span> ClojureScript</h2>
+<div id="outline-container-org968939d" class="outline-2">
+<h2 id="org968939d"><span class="section-number-2">8</span> ClojureScript</h2>
 </div>
 
-<div id="outline-container-orga803364" class="outline-2">
-<h2 id="orga803364"><span class="section-number-2">9</span> Reader conditionals (.cljc)</h2>
+<div id="outline-container-orgb9146dd" class="outline-2">
+<h2 id="orgb9146dd"><span class="section-number-2">9</span> Reader conditionals (.cljc)</h2>
 </div>
 
-<div id="outline-container-orge29fa1c" class="outline-2">
-<h2 id="orge29fa1c"><span class="section-number-2">10</span> ClojureCLR</h2>
+<div id="outline-container-orgc1156d7" class="outline-2">
+<h2 id="orgc1156d7"><span class="section-number-2">10</span> ClojureCLR</h2>
 </div>
 
-<div id="outline-container-org0c9c9d9" class="outline-2">
-<h2 id="org0c9c9d9"><span class="section-number-2">11</span> Literatura</h2>
+<div id="outline-container-orgf505e34" class="outline-2">
+<h2 id="orgf505e34"><span class="section-number-2">11</span> Literatura</h2>
 <div class="outline-text-2" id="text-11">
 <ul class="org-ul">
 <li><a href="http://www.braveclojure.com/">Clojure For The Brave and True</a> &#x2014; Daniel Higginbotham</li>
@@ -571,7 +693,7 @@ Abelson, Gerald Jay Sussman with Julie Sussman (sa video
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Novak Boškov</p>
-<p class="date">Created: 2017-04-02 нед 19:07</p>
+<p class="date">Created: 2017-04-02 нед 23:29</p>
 <p class="validation"></p>
 </div>
 </body>
