--- a/index.html
+++ b/index.html
@@ -45,8 +45,14 @@
     <li><a href="org/haskell.html">Haskell</a></li>
 </ul>
 
+Sav kod sa ovog predmeta je javno dostupan na <a href="https://github.com/NapredneTehnikeProgramiranja">GitHub-u</a>.
+
 <h2>Obaveštenja</h2>
 <ul>
+    
+        <li>
+            <a href="./posts/2017-04-22-loz-ns-python-coll.html">Rezultati i rešenja kolokvijuma iz Python-a</a> - April 22, 2017
+        </li>
     
         <li>
             <a href="./posts/2017-04-09-loz-clojure-vezbe-2.html">Loznica - kolokvijum Python, vežbe Clojure</a> - April  9, 2017
@@ -72,6 +78,18 @@
 
 
 <p>ili pogledajte arhivu <a href="./archive.html">arhivu</a>.</p>
+
+<h3>Hvala</h3>
+
+Materijali za ovaj kurs su pripremljeni uz pomoć divne
+tehnologije. Ovde želim da istaknem ono što možda nije istaknuto u
+materijalima:
+
+<ul>
+    <li><a href="http://orgmode.org/">Org mode za Emacs</a></li>
+    <li><a href="https://github.com/fniessen/org-html-themes">org-html-themes</a></li>
+    <li><a href="https://jaspervdj.be/hakyll/">Hakyll - Haskell static site generator</a></li>
+</ul>
 
         </div>
 
