--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@ title: Napredne tehnike programiranja
 
 Sav kod sa ovog predmeta je javno dostupan na <a href="https://github.com/NapredneTehnikeProgramiranja">GitHub-u</a>.
 
+<p>
+Želite nešto da kažete/ispravite/dodate/sugerišete? <b>Vaš doprinos je dobrodošao.</b>
+Učinite to <a href="https://github.com/NapredneTehnikeProgramiranja/NapredneTehnikeProgramiranja.github.io/issues/">ovde</a>.
+</p>
+
 <h2>Obaveštenja</h2>
 $partial("templates/post-list.html")$
 
