Obaveštenje i ispravak grešaka na index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Napredne tehnike programiranja
     i informacione tehnologije</b> na <i>Fakultetu Tehničkih Nauka</i> u <i>Novom Sadu</i>.
 </p>
 
-<p>Ovde možete naći informacije o predmetu</p>
+<p>Ovde možete naći informacije o predmetu.</p>
 
 <h2>Materijali</h2>
 
@@ -35,7 +35,7 @@ Učinite to <a href="https://github.com/NapredneTehnikeProgramiranja/NapredneTeh
 <h2>Obaveštenja</h2>
 $partial("templates/post-list.html")$
 
-<p>ili pogledajte arhivu <a href="/archive.html">arhivu</a>.</p>
+<p>ili pogledajte <a href="/archive.html">arhivu</a>.</p>
 
 <h3>Hvala</h3>
 
