--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ title: Napredne tehnike programiranja
 <ul>
     <li><a href="org/python.html">Python</a></li>
     <li><a href="org/clojure.html">Clojure</a></li>
+    <li><a href="org/smalltalk.html">Smalltalk</a></li>
     <li><a href="org/haskell.html">Haskell</a></li>
 </ul>
 
